# opencv_serial_kinect

./: BoardControl.cpp  BoardControl.h  CMakeLists.txt  OpenCVKinect.h  main.cpp  serialport.cpp  serialport.h
